--- a/lifeStyleFront/public/css/style.css
+++ b/lifeStyleFront/public/css/style.css
@@ -1,17 +1,34 @@
 :root {
-    --beige-custom: rgb(254, 249, 208);
+    --beige-custom: rgba(44, 42, 27, 0.5);
+    --header-color: rgb(249, 215, 215);
     --default-box-shadow: 1px 1px 10px 1px rgb(0, 86, 86)
 }
 
 h1 {
     margin: 50px 0px;
     text-align: center;
-    color: var(--beige-custom);
+    color: var(--header-color);
 }
 
 input {
     margin: 5px 0;
 }
+
+.form-control:focus {
+    background-color: rgb(182, 236, 227);
+    border-width: 6;
+    border-color: rgb(67, 209, 253);
+}
+
+.form-control:hover {
+    border-width: 6;
+    border-color: rgb(67, 209, 253);
+}
+
+.all-budget-choices, .expenses-table {
+    box-shadow: var(--default-box-shadow);
+ }
+
 
 .budget-panels {
     width: 90%;
@@ -31,14 +48,42 @@ input {
     padding: 8px 20px;
 }
 
+
+.btn-close.cross {
+    font-size: 35px;
+}
+
 #new-budget-tips {
     background-color: var(--beige-custom);
     border-radius: 20px;
+    padding: 20px;
+    border-radius: 20px;
+    box-shadow: var(--default-box-shadow);
 }
 
-#form-new-budget, #form-edit-budget, #form-submit-expenses {
+#form-new-budget, #form-edit-budget, #form-submit-expenses, .list-group-balance {
     background-color: rgba(29, 0, 23,0.2);
     padding: 20px;
     border-radius: 20px;
     box-shadow: var(--default-box-shadow);
+}
+
+.list-group-balance {
+    font-size: 20px;
+}
+
+.list-item-capital-balance {
+    color: greenyellow;
+}
+
+.list-item-eatout-balance {
+    color: rgb(255, 90, 173);
+}   
+
+.list-item-entert-balance {
+    color: skyblue
+}
+
+.list-item-total-balance {
+    color: orange;
 }
