--- a/lifeStyleFront/src/css/style.css
+++ b/lifeStyleFront/src/css/style.css
@@ -40,12 +40,11 @@ footer {
 }
 
 .home-panels {
-    padding: 100px;
-    width: 100%;
-    margin: 10px;
-    border-radius: 20px;
-    font-size: x-large;
-}
+    padding-right: 100px;
+    padding-left: 100px;
+    border-radius: 100px;
+}   
+
 
 .submit-btn {
     padding: 8px 20px;
@@ -61,6 +60,16 @@ footer {
     padding: 20px;
     border-radius: 20px;
     box-shadow: var(--default-box-shadow);
+    color: lightgray;
+    font-size: 18px
+}
+
+.page-explanations-homepanels {
+    background-color: rgba(41, 41, 41, 0.5);
+    border-radius: 20px;
+    padding: 20px;
+    border-radius: 20px;
+    box-shadow: 1px 1px 10px 1px rgba(219, 106, 0, 0.5);
     color: lightgray;
     font-size: 18px
 }
