--- a/lifeStyleFront/src/css/style.css
+++ b/lifeStyleFront/src/css/style.css
@@ -78,25 +78,13 @@ footer {
     color: lightgray;
 }
 
-.new-budget-btn {
-    cursor: "pointer";
-    background-size: cover;
-    background-image: url("../images/NewBudget.jpg");
-    padding-bottom: 100px;
-    padding-top: 100px;
-    border-width: 2px; 
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-}
-
 .all-budgets-btn {
-    cursor: "pointer";
-    background-size: cover;
-    background-image: url("../images/AllBudgets.jpg");
-    padding-bottom: 100px;
-    padding-top: 100px;
+    font-size: 25px;
     border-width: 2px;
-    backdrop-filter: blur(8px);
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    padding: 20px auto;
+    width: 250px;
+    box-shadow: 1px 1px 5px rgb(184, 131, 15);
+
 }
 
 .fitness-main-panels {
