--- a/lifeStyleFront/src/css/style.css
+++ b/lifeStyleFront/src/css/style.css
@@ -161,3 +161,18 @@ footer {
   } */
 
 
+  .fancy-textarea {
+    width: 100%;
+    height: 80px;
+    padding: 10px;
+    border: 2px solid #ccc;
+    border-radius: 15px;
+    font-size: 16px;
+    outline: none;
+    transition: border-color 0.3s ease;
+  }
+  
+  .fancy-textarea:focus {
+    border-color: #00ddff; /* Change the border color when focused */
+    background-color: rgb(253, 222, 245);
+  }
