Added features of update and delete to plan records; improved design both backend and frontend

--- a/lifeStyleFront/src/css/style.css
+++ b/lifeStyleFront/src/css/style.css
@@ -168,3 +168,7 @@ transition: border-color 0.3s ease;
 border-color: #00ddff; /* Change the border color when focused */
 background-color: rgb(253, 222, 245);
 }
+
+#plan-records-table:hover {
+    cursor: pointer;
+}
