--- a/lifeStyleFront/src/css/style.css
+++ b/lifeStyleFront/src/css/style.css
@@ -7,6 +7,9 @@
     --accordion-btn-color: #EDCDBB;
 }
 
+* {
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
 body {
     background-color: #f0ebe1;
 }
@@ -164,7 +167,7 @@ footer {
     border-radius: 20px;
     margin: auto;
     box-shadow: 0 6px 20px rgba(102, 12, 57, 0.377);
-    max-width: 30rem;
+    max-width: 35rem;
 }
 
 
